# resume-coach

./: .eslintrc.json  .gitignore  AGENTS.md  PRD.md  README.md  biome.json  components.json  docker-compose.override.yml  docker-compose.yml  next.config.js  notebook.ipynb  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  skills-lock.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.agents/skills/: paperclip  paperclip-create-agent  paperclip-create-plugin  para-memory-files
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-dev.yml  entrypoint.sh
.github/: dependabot.yml
agents/growth-lead/: SOUL.md  (+2 more)
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  tasks.py
backend/app/: __init__.py  server.py
backend/celery_app/: __init__.py  config.py  tasks.py
backend/llm/: import_job.py
frontend/: .eslintrc.json  jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
homepage/: .gitignore  auth.ts  package-lock.json  package.json  tailwind.config.ts
latex_resume/: .gitignore  Resume_LukaszKarolewski.tex  build_pdf.sh
plans/: 2026-03-26-first-20-paid-users-growth-plan.md
prisma/: schema.prisma  seed.ts
resume/: CV_lukaszkarolewski.tex  Resume_LukaszKarolewski.tex  build_pdf.sh  init.sh
src/: auth-client.ts  auth-config.ts  auth.test.ts  auth.ts  env.js  proxy.ts  utils.ts
tests/: landing.spec.ts
web/: .eslintrc.json  package-lock.json  package.json
(+263 files in other folders)
